--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "test:unit": "vitest",
     "build-only": "vite build",
     "type-check": "vue-tsc --build",
-    "lint": "eslint . --fix"
+    "lint": "eslint . --fix",
+    "format": "prettier --write ."
   },
   "dependencies": {
     "@heroicons/vue": "^2.2.0",
@@ -41,6 +42,7 @@
     "jsdom": "^27.0.0",
     "npm-run-all2": "^8.0.4",
     "postcss": "^8.5.6",
+    "prettier": "^3.6.2",
     "sass": "^1.93.2",
     "tailwindcss": "^4.1.15",
     "typescript": "~5.9.0",
